2.3/main/configmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-deployment
  labels:
    app: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: [ 'sh', '-c', 'while true; do echo Netology! >> /sasha/logoutput.txt; sleep 5; done']
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: volume
      volumes:
      - name: volume
        configMap:
          name: index
